might have fixed overflow issues

--- a/inspect-gpt-next/styles/globals.css
+++ b/inspect-gpt-next/styles/globals.css
@@ -17,6 +17,7 @@ h1 {
 
 * {
   font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 #blob-one {
